--- a/index.html
+++ b/index.html
@@ -7,10 +7,35 @@
   <title>ANDRY.dk - Neurologisk Fysioterapi</title>
 
   <script src="script.js" defer></script>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
+      <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+<nav>
+  <ul>
+    <li id="calltoa">Booking</li>
+        <li>Priser</li>
+            <li>Om mig</li>
+  </ul>
+</nav>
+
+<section class="bluesection">
+  <h1>Velkommen til Andry<br>Neurologisk Fysioterapi</h1>
+
+  <p>Speciale i funktionel neurologisk fysioterapi,<br>
+  som er for den almene motionist og atleter på højeste plan!</p>
+</section>
+<div class="bluebottom"></div>
+
+<h2>BEHANDLING<br><br></h2>
+
+<div class="bluetop"></div>
+<section class="bluesection">
+<h2>Bestil en tid</h2>
+</section>
+<div class="bluebottom"></div>
 
 </body>
 
