--- a/index.html
+++ b/index.html
@@ -6,18 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ANDRY.dk - Neurologisk Fysioterapi</title>
 
-  <script src="script.js" defer></script>
+  <script src="js/js.js" defer></script>
+  <script src="js/jquery-3.4.1.min.js"></script>
       <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+<h2 id="logo">andry.dk</h2>
+
+  <div id="burgermenu">
+    <span class="top"></span>
+    <span class="midte"></span>
+    <span class="bund"></span>
+  </div>
+
 <nav>
-  <ul>
+  <ul class="mobileMenu">
     <li id="calltoa">Booking</li>
         <li>Priser</li>
             <li>Om mig</li>
+            <li>Kontakt</li>
   </ul>
 </nav>
 
@@ -26,16 +36,28 @@
 
   <p>Speciale i funktionel neurologisk fysioterapi,<br>
   som er for den almene motionist og atleter på højeste plan!</p>
+  <h2 id="hideshow">Book tid nu</h2>
 </section>
+
 <div class="bluebottom"></div>
 
-<h2>BEHANDLING<br><br></h2>
+<h2>BEHANDLING</h2>
 
 <div class="bluetop"></div>
 <section class="bluesection">
 <h2>Bestil en tid</h2>
 </section>
 <div class="bluebottom"></div>
+
+<h2>Kunderne siger</h2>
+
+
+<div class="bluetop"></div>
+<section class="bluesection">
+<h2>Flemming Andry</h2>
+</section>
+<div class="bluebottom"></div>
+
 
 </body>
 
