--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   </ul>
 </nav>
 
-<section class="bluesection">
+<section class="bluesectionheader">
   <h1>Velkommen til Andry<br>Neurologisk Fysioterapi</h1>
 
   <p>Speciale i funktionel neurologisk fysioterapi,<br>
-  som er for den almene motionist og atleter på højeste plan!</p>
+  for den almene motionist og atleter på højeste plan!</p>
   <h2 id="hideshow">Book tid nu</h2>
 </section>
 
