--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 
 <h2>BEHANDLING</h2>
 
+
 <div class="bluetop"></div>
 <section class="bluesection">
 <h2>Bestil en tid</h2>
+<iframe id="booking" src="https://system.easypractice.net/book/andry-test?fbclid=IwAR1qZJ3hs8GtUzjOLNSgdRBx0_7oqSn32R-8KBPbWutn4QCgqTn4tTXZQRQ#choose-service"></iframe>
 </section>
 <div class="bluebottom"></div>
 
