--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="js/jquery-3.4.1.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/530a8daa62.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -97,6 +98,10 @@
   <div class="bluesection">
     <br>
     <div id="some">
+    <i class="fab fa-facebook"></i> 
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-linkedin"></i>
+<img src="images/Z-Health.png">
 <br>
     </div>
 
