--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
   <div class="bluebottom"></div>
 
   <h2>Behandlingsform</h2>
+
+<div class="flexboxx">
+  <img id="dnastring" src="images/DNAstring.png" alt="DNA streng illustration">
+</div>
+
 <section id="ydelser">
 
 <div>
@@ -126,9 +131,11 @@
   <div class="bluesection">
     <br>
     <div id="some">
-    <i class="fab fa-facebook"></i> 
+      <div>
+    <i class="fab fa-facebook"></i>
         <i class="fab fa-instagram"></i>
         <i class="fab fa-linkedin"></i>
+      </div>
 <img src="images/Z-Health.png">
 <br>
     </div>
