--- a/index.html
+++ b/index.html
@@ -52,32 +52,38 @@
 <section id="ydelser">
 
 <div>
-  <img src="images/samtale.png" alt="samtale illustration">
+  <img src="images/samtale.svg" alt="samtale illustration">
 <h3>Indledende samtale</h3>
 <p>Alle behandlinger starter med en personlig samtale. Her finder vi uf, hvad lige netop dine behov og mål er.</p>
 </div>
 
 <div>
-  <img src="images/hjerne.png" alt="hjerne illustration">
+  <img src="images/hjerne.svg" alt="hjerne illustration">
 <h3>Test af 'ledningsnetværket'</h3>
 <p>Efterfølgende ser vi på, hvordan dit personlige system fra hjernen og ud i musklerne fungere.</p>
 </div>
 
 <div>
-  <img src="images/fysisktest.png" alt="Fysisk test illustration">
+  <img src="images/fysisktest.svg" alt="Fysisk test illustration">
 <h3>Test af krop</h3>
 <p>Som næste led laver vi en række fysiske tests, som viser hvor og hvilke problemer der gemmer sig.</p>
 </div>
 
 <div>
-  <img src="images/behandling.png" alt="behandling illustration">
+  <img src="images/behandling.svg" alt="behandling illustration">
 <h3>Behandling</h3>
 <p>Ud fra ovenstående proces kan vi nu gå i gang med at løse netop dine udfordringer.</p>
 </div>
 
 </section>
 
-
+<div id="skubud">Priser</div>
+<div id="priser">
+  <h3>Priser</h3>
+  <p>Alle priser er opgivet i danske kroner og er inklusiv moms.<br>
+    Første behandling: 600,-<br>
+     Anden behandling: 500,-
+  </p></div>
 
   <div class="bluetop"></div>
   <section class="bluesection">
@@ -87,7 +93,6 @@
   <div class="bluebottom"></div>
 
   <h2>Kunderne siger</h2>
-
 
   <div class="bluetop"></div>
   <section class="bluesection">
