About Andry added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="bluebottom"></div>
 
   <h2>Behandlingsform</h2>
-
+<p>Neurologisk fysioterapi har fokus på sammenspillet mellem din hjerne og din bevægelighed. Jeg forsøger at påvirke centralnervesystemet, for at du kan opnå bedre resultater!</p>
 <div class="flexboxx">
   <img id="dnastring" src="images/DNAstring.png" alt="DNA streng illustration">
 </div>
@@ -54,7 +54,7 @@
 <div>
   <img src="images/samtale.svg" alt="samtale illustration">
 <h3>Indledende samtale</h3>
-<p>Alle behandlinger starter med en personlig samtale. Her finder vi uf, hvad lige netop dine behov og mål er.</p>
+<p>Alle behandlinger starter med en personlig samtale. Her finder vi uf, hvad lige netop dine behov og mål er. Vi </p>
 </div>
 
 <div>
@@ -92,11 +92,20 @@
   </section>
   <div class="bluebottom"></div>
 
-  <h2>Kunderne siger</h2>
+  <h2>Om Flemming</h2>
+  <section id="flemmingsection">
+
+    <picture><source media="(min-width: 768px)" srcset="images/andry.png">
+		<img id="flemmingandry" src="images/andrymobile.png" alt="Flemming Andry Nuerologisk Fysioterapeut">
+        </picture>
+
+<h2>Om mig</h2>
+
+</section>
 
   <div class="bluetop"></div>
   <section class="bluesection">
-    <h2>Flemming Andry</h2>
+    <h2>Kunderne siger</h2>
   </section>
   <div class="bluebottom"></div>
 
@@ -141,7 +150,7 @@
         <i class="fab fa-instagram"></i>
         <i class="fab fa-linkedin"></i>
       </div>
-<img src="images/Z-Health.png">
+<img src="images/Z-Health.png" alt="Z-health logo">
 <br>
     </div>
 
