--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </section>
   <div class="bluebottom"></div>
 
-    <div id="map"></div>
+    <div id="map"><h4>Find mig</h4></div>
       <div id="bluemini"></div>
   <footer id="footer">
     <div>
