--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
     <picture><source media="(min-width: 768px)" srcset="images/andry.png">
 		<img id="flemmingandry" src="images/andrymobile.png" alt="Flemming Andry Nuerologisk Fysioterapeut">
         </picture>
-<div class="flems">
+
 <ul>
-<li>Uddannelse: Fysioterapuet med speciale i manuel behandling</li>
+<li>Uddannelse: Fysioterapuet</li>
 <li>Oprindelse: Grenå </li>
 <li>Bopæl: Aarhus</li>
 <li>Erfaring: 4 år </li>
 </ul>
-<h2>Hvorfor neurologisk fysioterapi? </h2>
+<h3 id="uber">Hvorfor neurologisk fysioterapi? </h3>
 <p>Forestil dig, at du står foran en stikkontakt og trykker på knappen. Optimalt tænder lyset i samme øjeblik du trykker, men nogle gange oplever man at lyset først tænder efter nogle sekunder - eller nogle gange slet ikke tænder.</p><p> På samme måde fungerer centralnervesystemet, hvor hjernen sender impulser ud til kroppen, og jo hurtigere de når frem, jo bedre fungere du! Det kan vi optimere med neurologisk fysioterapi!</p>
 <p>Derfor mener jeg at sammenspillet mellem fysioterapi og neurologi fungerer rigtig godt.</p>
       
       
-</div>
+
 </section>
 
   <div class="bluetop"></div>
