Om flemming, små rettelser og forsøg med tilt

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="bluebottom"></div>
 
   <h2>Behandlingsform</h2>
-<p>Neurologisk fysioterapi har fokus på sammenspillet mellem din hjerne og din bevægelighed. Jeg forsøger at påvirke centralnervesystemet, for at du kan opnå bedre resultater!</p>
+<p id="smalltext">Neurologisk fysioterapi har fokus på sammenspillet mellem din hjerne og din bevægelighed. Jeg forsøger at påvirke centralnervesystemet, for at du kan opnå bedre resultater!</p>
 <div class="flexboxx">
   <img id="dnastring" src="images/DNAstring.svg" alt="DNA streng illustration">
 </div>
@@ -81,38 +81,59 @@
 <div id="skubud">Priser</div>
 <div id="priser">
   <h3>Priser</h3>
-  <p>Alle priser er opgivet i danske kroner og er inklusiv moms.<br>
-    Første behandling: 600,-<br>
-     Anden behandling: 500,-
+  <p>Alle priser er opgivet i danske kroner.<br>Tjek evt. om du kan få tilskud fra Danmark.<br>
+    Første behandling: <span id="fed">650,-</span><br>
+     Anden behandling: <span id="fed">550,-</span>
   </p></div>
 
   <div class="bluetop"></div>
   <section class="bluesection">
     <h2 id="bookh2">Bestil en tid</h2>
     <iframe id="booking" src="https://system.easypractice.net/book/andry-test?fbclid=IwAR1qZJ3hs8GtUzjOLNSgdRBx0_7oqSn32R-8KBPbWutn4QCgqTn4tTXZQRQ#choose-service"></iframe>
+
+<h5>Afbud og udeblivelse</h5>
+<p class="afbud">Ved afbud bedes du kontakte mig minimum 12 timer før du har tid hos mig.<br>
+Ved udeblivelse eller for sent afbud afregnes normal konsultation kr. 550.</p>
+
   </section>
   <div class="bluebottom"></div>
 
   <h2>Om Flemming</h2>
   <section id="flemmingsection">
 
+<div id="centerflemming">
     <picture><source media="(min-width: 768px)" srcset="images/andry.png">
 		<img id="flemmingandry" src="images/andrymobile.png" alt="Flemming Andry Nuerologisk Fysioterapeut">
-        </picture>
+  </picture></div>
+
+<div id="biografi">
+<h3 id="uber">Flemming Andry </h3>
+<p>Jeg hedder flemming Andry og er uddannet fysioterapeut. Jeg går meget op i sport og har selv dyrket blandt andet basketball og triatlon på højt niveau.
+</p>
+
+<p>Mine bahandlinger foregår i en proces, hvor vi først dykker ned i, hvordan netop din krop reagere. Det betyder at alle behandlinger er forskellige og tilpasset den enkeltes krop.</p>
+
+<div id="line"></div>
 
 <ul>
-<li>Uddannelse: Fysioterapuet</li>
-<li>Oprindelse: Grenå </li>
-<li>Bopæl: Aarhus</li>
-<li>Erfaring: 4 år </li>
+<li><span id="fed">Uddannelse:</span> Fysioterapuet</li>
+<li><span id="fed">Oprindelse:</span> Grenå </li>
+<li><span id="fed">Bopæl:</span> Aarhus</li>
+<li><span id="fed">Erfaring:</span> 4 år </li>
 </ul>
+
+</div>
+
+
+<div>
 <h3 id="uber">Hvorfor neurologisk fysioterapi? </h3>
 <p>Forestil dig, at du står foran en stikkontakt og trykker på knappen. Optimalt tænder lyset i samme øjeblik du trykker, men nogle gange oplever man at lyset først tænder efter nogle sekunder - eller nogle gange slet ikke tænder.</p><p> På samme måde fungerer centralnervesystemet, hvor hjernen sender impulser ud til kroppen, og jo hurtigere de når frem, jo bedre fungere du! Det kan vi optimere med neurologisk fysioterapi!</p>
-<p>Derfor mener jeg at sammenspillet mellem fysioterapi og neurologi fungerer rigtig godt.</p>
-      
-      
+<p>Derfor mener jeg at sammenspillet mellem fysioterapi og neurologi fungerer rigtig godt.</p></div>
+
 
 </section>
+
+<h4 id="facebooklink"><span class="bluetext">--------</span> <a target="_blank" href="https://www.facebook.com/andryneurologiskfysioterapi/"> Find mig også på Facebook </a> <span class="bluetext">--------</span></h4>
 
   <div class="bluetop"></div>
   <section class="bluesection">
