--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@ Ved udeblivelse eller for sent afbud afregnes normal konsultation kr. 550.</p>
     <h2>Kunderne siger</h2>
   </section>
   <div class="bluebottom"></div>
-
+<div class="social">
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-e45837cf-5620-4dad-95d2-784dd4d74e7a"></div>    
+</div>
     <div id="map"><h4>Find mig</h4></div>
       <div id="bluemini"></div>
   <footer id="footer">
@@ -184,11 +187,13 @@ Ved udeblivelse eller for sent afbud afregnes normal konsultation kr. 550.</p>
 
     <div id="some">
       <div>
-    <i class="fab fa-facebook"></i>
-        <i class="fab fa-instagram"></i>
+    <a href="https://www.facebook.com/andryneurologiskfysioterapi/?ref=br_tf&epa=SEARCH_BOX">
+    <i class="fab fa-facebook"></i></a>
+       <a href="https://www.instagram.com/flemmingandry/?hl=da"> <i class="fab fa-instagram"></i></a>
         <i class="fab fa-linkedin"></i>
       </div>
-<img src="images/Z-Health.png" alt="Z-health logo">
+    <a href="https://zhealtheducation.com/">
+<img src="images/Z-Health.png" alt="Z-health logo"></a>
 <br>
     </div>
 
