Update med slider - kundebedømmelse

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <h2>Behandlingsform</h2>
 <p id="smalltext">Neurologisk fysioterapi har fokus på sammenspillet mellem din hjerne og din bevægelighed. Jeg forsøger at påvirke centralnervesystemet, for at du kan opnå bedre resultater!</p>
 <div class="flexboxx">
-  <img id="dnastring" src="images/DNAstring.svg" alt="DNA streng illustration">
+  <img id="dnastring" src="images/dnastring.svg" alt="DNA streng illustration">
 </div>
 
 <section id="ydelser">
@@ -138,11 +138,42 @@ Ved udeblivelse eller for sent afbud afregnes normal konsultation kr. 550.</p>
   <div class="bluetop"></div>
   <section class="bluesection">
     <h2>Kunderne siger</h2>
+
+    <!--Den venstre knap -->
+      <button class="slideknap" onclick="plusDivs(-1)">&#10094;</button>
+      <!-- Den højre knap -->
+      <button class="slideknap" onclick="plusDivs(1)">&#10095;</button>
+    </div>
+
+    <div class="indhold">
+    <div class="billedet">
+      <img class="pics" src="images/andry.png" alt="Kundefoto">
+<div><h3>Oskar Nielsen</h3>
+<p>"Jeg synes behandlingerne er så fede! Den der personlighed, som han formår at "</p>
+</div>
+
+    </div>
+
+
+    <div class="billedet"><img class="pics" src="images/andrymobile.png" alt="Kundefoto">
+      <div><h3>Brian</h3>
+      <p>"Jeg synes behandlingerne er så fede! Den der personlighed, som han formår at " </p>
+      </div>
+    </div>
+
+
+    <div class="billedet"><img class="pics" src="images/andry.png" alt="Kundefoto">
+      <div><h3>Jette</h3>
+      <p>"Jeg synes behandlingerne er så fede! Den der personlighed, som han formår at " </p>
+      </div>
+    </div>
+
+
   </section>
   <div class="bluebottom"></div>
 <div class="social">
 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-e45837cf-5620-4dad-95d2-784dd4d74e7a"></div>    
+<div class="elfsight-app-e45837cf-5620-4dad-95d2-784dd4d74e7a"></div>
 </div>
     <div id="map"><h4>Find mig</h4></div>
       <div id="bluemini"></div>
