DNA med nyt navn

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <section class="bluesectionheader">
     <h1>Velkommen til Andry<br>Neurologisk Fysioterapi</h1>
 
+
     <p>Speciale i funktionel neurologisk fysioterapi,<br>
       for den almene motionist og atleter på højeste plan!</p>
       <a href="#bookh2"><h2 id="hideshow">Book tid nu</h2></a>
@@ -47,7 +48,7 @@
   <h2>Behandlingsform</h2>
 <p id="smalltext">Neurologisk fysioterapi har fokus på sammenspillet mellem din hjerne og din bevægelighed. Jeg forsøger at påvirke centralnervesystemet, for at du kan opnå bedre resultater!</p>
 <div class="flexboxx">
-  <img id="dnastring" src="images/dnastring.svg" alt="DNA streng illustration">
+  <img id="dnastring" src="images/dnastreng.svg" alt="DNA streng illustration">
 </div>
 
 <section id="ydelser">
