--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@ Ved udeblivelse eller for sent afbud afregnes normal konsultation kr. 550.</p>
     <div>
       <ul>
         <h3>Kontakt</h3>
-        <li>46352014</li>
-        <li>mail@gmail.com</li>
+        <li><a href="tel:46352014">46 35 20 14</a></li>
+        <li><a href="mailto:andry@gmail.com">Send en mail</a> </li>
       </ul>
     </div>
 
