--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Andry • Neurologisk Fysioterapii</title>
+  <title>Andry • Neurologisk Fysioterapi</title>
 <meta name="description" content="Søger du en professionel neurologisk fysioterapeut? Min klinik, Andry Neurologisk Fysioterapi, ligger i Åbyhøj i Aarhus og her laver jeg et hav af forskellige behandlingsmetoder, som kan hjælpe dig med blandt andet skadesbehandling, skadesforebyggelse eller performanceoptimering. Du kan komme hos mig uanset om du er eliteudøver eller om du dyrker sport som motionist. Behandlingen er tilpasset den individuelle og vha. test og re-tests kan vi genoptræne og rehabilitere dine muskler og nerver således du kan udnytte kroppen fulde potentiale. " />
-
+<link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/js.js" defer></script>
   <script src="js/jquery-3.4.1.min.js"></script>
@@ -199,7 +199,7 @@
       <ul>
         <h3>Kontakt</h3>
         <li><a href="tel:46352014">46 35 20 14</a></li>
-        <li><a href="mailto:andry@gmail.com">Send en mail</a> </li>
+        <li><a href="mailto:andry@andry.dk">Send en mail</a> </li>
       </ul>
     </div>
 
