--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Andry • Neurologisk Fysioterapi</title>
-<meta name="description" content="Søger du en professionel neurologisk fysioterapeut? Min klinik, Andry Neurologisk Fysioterapi, ligger i Åbyhøj i Aarhus og her laver jeg et hav af forskellige behandlingsmetoder, som kan hjælpe dig med blandt andet skadesbehandling, skadesforebyggelse eller performanceoptimering. Du kan komme hos mig uanset om du er eliteudøver eller om du dyrker sport som motionist. Behandlingen er tilpasset den individuelle og vha. test og re-tests kan vi genoptræne og rehabilitere dine muskler og nerver således du kan udnytte kroppen fulde potentiale. " />
+  <title>Andry • Neurologisk Fysioterapi - Åbyhøj Aarhus</title>
+<meta name="description" content="Andry Neurologisk Fysioterapi i Åbyhøj/Aarhus hjælper dig med skadesbehandling, skadesforebyggelse eller performanceoptimering. Uanset sportsligt niveau, hjælper jeg dig til at opnå din krops fulde potentiale." />
 <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/js.js" defer></script>
@@ -49,7 +49,7 @@
   <div class="bluebottom"></div>
 
   <h2>Behandlingsform</h2>
-  <p id="smalltext">Neurologisk fysioterapi har fokus på sammenspillet mellem din hjerne og din bevægelighed. Jeg forsøger at påvirke centralnervesystemet, for at du kan opnå bedre resultater!</p>
+  <p id="smalltext">Neurologisk fysioterapi har fokus på sammenspillet mellem din hjerne og din bevægelighed. Jeg forsøger at påvirke centralnervesystemet, for at du kan opnå bedre resultater for dig og din krop!</p>
   <div class="flexboxx">
     <img id="dnastring" src="images/dnastreng.svg" alt="DNA streng illustration">
   </div>
@@ -59,28 +59,28 @@
     <div>
       <img src="images/samtale.svg" alt="samtale illustration">
       <h3>Indledende samtale</h3>
-      <p>Alle behandlinger starter med en personlig samtale. Her finder vi uf, hvad lige netop dine behov og mål er.</p>
+      <p>Alle behandlinger starter med en personlig samtale. Her finder vi uf, hvad lige netop dine behov og mål er. Ud fra dem kan vi tilpasse træning og behandling specifikt til dig.</p>
       <p class="arrowdown">&#10095;</p>
     </div>
 
     <div>
       <img src="images/hjerne.svg" alt="hjerne illustration">
       <h3>Test af 'ledningsnetværket'</h3>
-      <p>Efterfølgende ser vi på, hvordan dit personlige system fra hjernen og ud i musklerne fungere.</p>
+      <p>Efterfølgende ser vi på, hvordan dit personlige system fra hjernen og ud i musklerne fungerer. Er der områder vi kan optimere på centralnervesystemet eller skal vi gå direkte videre til ordinær fysioterapi.</p>
       <p class="arrowdown">&#10095;</p>
     </div>
 
     <div>
       <img src="images/fysisktest.svg" alt="Fysisk test illustration">
       <h3>Test af krop</h3>
-      <p>Som næste led laver vi en række fysiske tests, som viser hvor og hvilke problemer der gemmer sig.</p>
+      <p>Som næste led laver vi en række fysiske tests, som viser hvor og hvilke problemer der gemmer sig. Det kan være i forhold til balancen, synet eller selve musklerne.</p>
       <p class="arrowdown">&#10095;</p>
     </div>
 
     <div>
       <img src="images/behandling.svg" alt="behandling illustration">
       <h3>Behandling</h3>
-      <p>Ud fra ovenstående proces kan vi nu gå i gang med at løse netop dine udfordringer.</p>
+      <p>Ud fra ovenstående proces kan vi nu gå i gang med at løse netop dine udfordringer. Sker der ikke relativt hurtigt fremgang, kan vi tilapsse endnu mere og ændre en smule på behandlingen.</p>
     </div>
 
   </section>
