SEO og performanceoptimering

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/530a8daa62.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -59,7 +58,7 @@
     <div>
       <img src="images/samtale.svg" alt="samtale illustration">
       <h3>Indledende samtale</h3>
-      <p>Alle behandlinger starter med en personlig samtale. Her finder vi uf, hvad lige netop dine behov og mål er. Ud fra dem kan vi tilpasse træning og behandling specifikt til dig.</p>
+      <p>Alle behandlinger starter med en personlig samtale. Her finder vi ud, hvad lige netop dine behov og mål er. Ud fra dem kan vi tilpasse træning og behandling specifikt til dig.</p>
       <p class="arrowdown">&#10095;</p>
     </div>
 
@@ -80,7 +79,7 @@
     <div>
       <img src="images/behandling.svg" alt="behandling illustration">
       <h3>Behandling</h3>
-      <p>Ud fra ovenstående proces kan vi nu gå i gang med at løse netop dine udfordringer. Sker der ikke relativt hurtigt fremgang, kan vi tilapsse endnu mere og ændre en smule på behandlingen.</p>
+      <p>Ud fra ovenstående proces kan vi nu gå i gang med at løse netop dine udfordringer. Sker der ikke relativt hurtigt fremgang, kan vi tilpasse hele behandlingen endnu mere og ændre en smule på behandlingen. I denne proces arbejder jeg med mange forskellige værktøjer - herunder cupping.</p>
     </div>
 
   </section>
@@ -100,7 +99,7 @@
     <iframe id="booking" src="https://system.easypractice.net/book/andry-test?fbclid=IwAR1qZJ3hs8GtUzjOLNSgdRBx0_7oqSn32R-8KBPbWutn4QCgqTn4tTXZQRQ#choose-service"></iframe>
 
     <h5>Afbud og udeblivelse</h5>
-    <p class="afbud">Ved afbud bedes du kontakte mig minimum 12 timer før du har tid hos mig.<br>
+    <p class="afbud">Ved afbud bedes du kontakte mig minimum 12 timer før din tid hos mig starter.<br>
       Ved udeblivelse eller for sent afbud afregnes normal konsultation kr. 550.</p>
 
   </section>
@@ -137,9 +136,9 @@
 
     <div>
       <h3 class="uber">Hvorfor neurologisk fysioterapi? </h3>
-      <p>Forestil dig, at du står foran en stikkontakt og trykker på knappen. Optimalt tænder lyset i samme øjeblik du trykker, men nogle gange oplever man at lyset først tænder efter nogle sekunder - eller nogle gange slet ikke tænder.</p>
-      <p> På samme måde fungerer centralnervesystemet, hvor hjernen sender impulser ud til kroppen, og jo hurtigere de når frem, jo bedre fungere du! Det kan vi optimere med neurologisk fysioterapi!</p>
-      <p>Derfor mener jeg at sammenspillet mellem fysioterapi og neurologi fungerer rigtig godt.</p>
+      <p>Forestil dig, at du står foran en stikkontakt og trykker på knappen. Optimalt tænder lyset i samme øjeblik du trykker, men nogle gange oplever man at lyset først tænder efter nogle sekunder. Nogle gange tænder det faktisk slet ikke.</p>
+      <p> På samme måde fungerer centralnervesystemet, hvor hjernen sender impulser ud til kroppen. Jo hurtigere de når frem, jo bedre fungere du. Det kan vi optimere med neurologisk fysioterapi!</p>
+      <p>Derfor mener jeg, at sammenspillet mellem fysioterapi og neurologi, fungerer rigtig godt.</p>
     </div>
 
 
@@ -188,6 +187,9 @@
   <div class="social">
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <div class="elfsight-app-e45837cf-5620-4dad-95d2-784dd4d74e7a"></div>
+
+<p>Du er mere end velkommen til at følge mig på de sociale medier. Her vil jeg løbende opdatere mine følgere med nyheder, nye behandlingsformer og andre ting der sker i klinikken. Du kan samtidig forvente at se, hvordan nogle af mine behandlinger foregår og se nogle af de værktøjer jeg benytter mig af.</p>
+
   </div>
   <div id="map">
     <h4>Find mig</h4>
@@ -208,7 +210,7 @@
       <ul>
         <h3>Adresse</h3>
         <li>Tomsagervej 2</li>
-        <li>Aarhus, Danmark</li>
+        <li>8230 Åbyhøj, Danmark</li>
       </ul>
     </div>
 
@@ -234,15 +236,17 @@
   <div class="bluesection">
 
     <div id="some">
-      <div>
-        <a href="https://www.facebook.com/andryneurologiskfysioterapi/?ref=br_tf&epa=SEARCH_BOX">
-          <i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/flemmingandry/?hl=da"> <i class="fab fa-instagram"></i></a>
-        <i class="fab fa-linkedin"></i>
+      <div id="links">
+        <a target="_blank" href="https://www.facebook.com/andryneurologiskfysioterapi/">
+          <img src="images/facebook.png" alt="Facebook logo"></a>
+
+        <a target="_blank" href="https://www.instagram.com/flemmingandry/?hl=da"> <img src="images/instagram.png" alt="Instagram logo"></a>
+
+     <img src="images/linkedin.png" alt="LinkedIn logo">
       </div>
-      <a href="https://zhealtheducation.com/">
+      <a target="_blank" href="https://zhealtheducation.com/">
         <img src="images/Z-Health.png" alt="Z-health logo"></a>
-      <br>
+
     </div>
 
   </div>
