--- a/index.html
+++ b/index.html
@@ -198,8 +198,11 @@
   <footer id="footer">
     <div>
 
+<div>
+
+    <h3>Kontakt</h3>
       <ul>
-        <h3>Kontakt</h3>
+
         <li><a href="tel:46352014">46 35 20 14</a></li>
         <li><a href="mailto:andry@andry.dk">Send en mail</a> </li>
       </ul>
@@ -207,29 +210,29 @@
 
     <div>
 
+<h3>Adresse</h3>
       <ul>
-        <h3>Adresse</h3>
         <li>Tomsagervej 2</li>
-        <li>8230 Åbyhøj, Danmark</li>
+        <li>8230 Åbyhøj</li>
       </ul>
     </div>
 
     <div>
-
+    <h3>Åbningstider</h3>
       <ul>
-        <h3>Åbningstider</h3>
         <li>Man-fre: 09-17</li>
         <li>Lør-søn: lukket</li>
       </ul>
     </div>
-    <div>
 
+<div>
+  <h3>Om</h3>
       <ul>
-        <h3>Om</h3>
         <li>Privacy policy</li>
         <li>Terms of service</li>
       </ul>
     </div>
+  </div>
 
   </footer>
 
